@@ -153,7 +153,7 @@ ATTR_credentiallifetime,
 ATTR_jobmustreport,
 ATTR_checkpoint_dir,
 ATTR_dispsvrsuffix,
-ATTR_jobsuffixalias, 
+ATTR_jobsuffixalias,
 ATTR_mailsubjectfmt,
 ATTR_mailbodyfmt,
 ATTR_npdefault,
@@ -172,3 +172,4 @@ ATTR_joblogkeepdays,
 ATTR_authusers,
 #endif
 ATTR_moabarraycompatible,
+ATTR_nomailforce,
