@@ -190,6 +190,7 @@ enum srv_atr
   SRV_ATR_authusers,
 #endif
   SRV_ATR_MoabArrayCompatible,
+  SRV_ATR_NoMailForce,
 #include "site_svr_attr_enum.h"
   /* This must be last */
   SRV_ATR_LAST
